tests/ui/pin-ergonomics/borrow-pinned-projection.stderr
error: cannot borrow `pair.0` as mutable because it is pinned
  --> $DIR/borrow-pinned-projection.rs:18:19
   |
LL |         let _pin = &pin mut pair.0;
   |                    --------------- pin of `pair.0` occurs here
...
LL |     let _borrow = &mut pair.0;
   |                   ^^^^^^^^^^^ borrow of `pair.0` as mutable occurs here

error: cannot move out of `pair.0` because it is pinned
  --> $DIR/borrow-pinned-projection.rs:30:18
   |
LL |         let _pin = &pin mut pair.0;
   |                    --------------- pin of `pair.0` occurs here
...
LL |     let _moved = pair.0;
   |                  ^^^^^^ move out of `pair.0` occurs here

error: aborting due to 2 previous errors

